--- a/code/src/components/album.css
+++ b/code/src/components/album.css
@@ -1,10 +1,9 @@
 .albumContainer {
-  width: 20%;
   margin: 10px;
   position: relative;
   width: 100%;
+  height: 50%;
   padding: 10px;
-  justify-content: space-evenly;
 }
 
 .albumWrapper:hover .albumCover {
@@ -16,16 +15,15 @@
   justify-content: space-evenly;
   position: absolute;
   margin: 0 auto;
-  width: 80%;
+  width: 100%;
   height: 25%;
-  top: 30%;
+  top: 25%;
   right: 0;
   bottom: 0;
   left: 0;
 }
 
 .albumCover {
-  width: 100%;
   max-height: 300px;
   object-fit: cover;
 }
@@ -48,6 +46,13 @@
 @media (min-width: 668px) and (max-width: 1024px) {
   .albumContainer {
     width: 50%;
+  }
+  .albumWrapper:hover .icons {
+    width: 90%;
+  }
+  .albumTitle {
+    font-weight: lighter;
+    font-size: 16px;
   }
 }
 
